logs/Slang/generated/yosys/asicworld_code_verilog_tutorial_first_counter_tb.sv.log
name: asicworld_code_verilog_tutorial_first_counter_tb
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v:9:10: error: use of undeclared identifier '$fopen'
  file = $fopen(`outfile);
         ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v:9:17: error: unknown macro or compiler directive '`outfile'
  file = $fopen(`outfile);
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v:10:3: error: use of undeclared identifier '$fdisplay'
  $fdisplay (file, "time\t clk reset enable counter");	
  ^~~~~~~~~                                           	
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v:19:3: error: use of undeclared identifier '$fdisplay'
  $fdisplay (file, "%g\t %b   %b     %b      %b", 
  ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_verilog_tutorial_first_counter_tb.v:30:1: error: unknown module 'first_counter'
first_counter U_counter (
^~~~~~~~~~~~~
